# gtk-test

./: .gitignore  Cargo.toml
resources/: example.glade  gtk4test.cmb  gtk4test.ui
src/: main.rs
